adjusted link spacing to fix ipad format issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ h1 {
 
 /* nav menu - social icon container */
 .nav-item {
-  padding: 20px 0px 20px 20px; 
+  padding: 20px 0px 20px 10px; 
   padding-bottom: 20px;
 }
 
